--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 PROJECT DISCONTINUED
 
+# THIS SHIT WAS WRITTEN USING CHATGPT
+
+
 ~I made a new look for a code~
 It`s 0.3.0 alpha now!
 So, i made it to interpret the file 'main.txt'
